--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -2,7 +2,8 @@
 <resources>
 
     <string name="hello">Hello World, AppActivity!</string>
-    <string name="app_name">App</string>
-    <string name="welcome_normal">Normal mode</string>
-
+    <string name="app_name">Map</string>
+    <string name="Normal_mode">Normal Mode</string>
+    <string name="radius">Radius</string>
+    
 </resources>
