Added icon images. Added path for the Start! button showing the next activity Main. Added text fields to main.

--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -11,6 +11,9 @@
     <string name="new_route">New route</string>
     <string name="options">Options</string>
     <string name="help">Help</string>
+    <string name="distance_to_p">Distance to nearest point: </string>
+    <string name="speed">Speed: </string>
+    <string name="total_distance">Total distance: </string>
         <string-array name="radius_spinner">
         <item>Radius: 1km</item>
         <item>Radius: 2km</item>
