--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="new_route">New route</string>
     <string name="about">About</string>
     <string name="help">Help</string>
+    <string name="newG">New Game</string>
     <string name="distance_to_p">Distance to nearest point: </string>
     <string name="speed">Speed: </string>
     <string name="total_distance">Total distance: </string>
